sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: not found: value j
    j=i-1
    ^AlgInsertionSort:8: error: not found: value j
    while ((j>0)&&(plusPetit(i,j))){
            ^AlgInsertionSort:8: error: not found: value j
    while ((j>0)&&(plusPetit(i,j))){
                               ^AlgInsertionSort:9: error: not found: value j
      copie(j,j+1)
            ^AlgInsertionSort:9: error: not found: value j
      copie(j,j+1)
              ^AlgInsertionSort:10: error: not found: value j
      j=j-1
      ^AlgInsertionSort:12: error: not found: value j
     	setValeur(j,temp) }} 
                  ^