sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  val taille=getNombreValeurs()
  var temp=0
  for (i<-1 to taille-1){
    temp=getValeur(i)
    j=i-1
    while ((j>0)&&(plusPetit(i,j))){
      copie(j,j+1)
      j=j-1
      }
     	setValeur(j,temp) }}